Enable admin: fix bug 1044184
Add admin staticfiles

Add rna dependencies and ConditionalAuthMiddleware

Add/update rna, django-pagedown

Add ConditionalAuthMiddleware, rna url

Add django-filter and settings.REST_FRAMEWORK

Add collectstatic to update_assets

Remove ctx param from base_update_assets

Clear *.pyc during deploy and move collectstatic

Add rna and api-token-auth PT

--- a/.gitmodules
+++ b/.gitmodules
@@ -55,3 +55,9 @@
 [submodule "vendor-local/src/chkcrontab"]
 	path = vendor-local/src/chkcrontab
 	url = git://github.com/lyda/chkcrontab.git
+[submodule "vendor-local/src/django-pagedown"]
+	path = vendor-local/src/django-pagedown
+	url = https://github.com/timmyomahony/django-pagedown.git
+[submodule "vendor-local/src/django-filter"]
+	path = vendor-local/src/django-filter
+	url = https://github.com/alex/django-filter.git
