--- a/etc/httpd/global.conf
+++ b/etc/httpd/global.conf
@@ -135,6 +135,10 @@ RewriteRule ^/ja/firefox/organizations/?$ http://www.mozilla.jp/business/downloa
 
 ## Redirect things to django!
 
+# bug 1044184
+RewriteRule ^/admin(/.*)?$ /b/admin$1 [PT]
+RewriteRule ^/rna(/.*)?$ /b/rna$1 [PT]
+
 # bug 797192, 892470
 RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?plugincheck(/?)$ /b/$1/plugincheck$2 [PT]
 
