--- a/etc/httpd/global.conf
+++ b/etc/httpd/global.conf
@@ -846,5 +846,6 @@ RewriteRule ^/hacking/notification/acceptance-email.txt$ https://static.mozilla.
 # bug 1071959
 RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?firefox/independent(/?.*)$ /b/$1firefox/independent$2 [PT]
 
-# bug 1093985, remove this once the product page is ready
+# bug 1093985, 1105664, remove this once the Firefox Hello product page is ready
 RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?firefox/hello(/?.*)$ https://support.mozilla.org/kb/respond-firefox-hello-invitation-guest-mode [L,R=temp]
+RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?firefox/([3-9]\d\.\d(?:a2|beta|\.\d)?)/hello/start/?$ https://support.mozilla.org/kb/firefox-hello-make-and-receive-calls-guest-mode [L,R=temp]
