--- a/etc/httpd/global.conf
+++ b/etc/httpd/global.conf
@@ -577,6 +577,13 @@ RewriteRule ^/(\w{2,3}(?:-\w{2}(?:-mac)?)?/)?thunderbird/releases/(.*)$ http://w
 RewriteRule ^/(\w{2,3}(?:-\w{2}(?:-mac)?)?/)?thunderbird/(.*)/releasenotes(.*)$ http://website-archive.mozilla.org/www.mozilla.org/thunderbird_releasenotes/en-US/thunderbird/$2/releasenotes$3 [L,R=301]
 RewriteRule ^/(\w{2,3}(?:-\w{2}(?:-mac)?)?/)?thunderbird/(.*)/system-requirements(.*)$ http://website-archive.mozilla.org/www.mozilla.org/thunderbird_releasenotes/en-US/thunderbird/$2/system-requirements$3 [L,R=301]
 
+# bug 1090468
+RewriteRule ^/security/older-alerts\.html http://website-archive.mozilla.org/www.mozilla.org/security/security/older-alerts.html [L,R=301]
+RewriteRule ^/security/security-announcement\.html http://website-archive.mozilla.org/www.mozilla.org/security/security/security-announcement.html [L,R=301]
+RewriteRule ^/security/iSECPartners_Phishing\.pdf http://website-archive.mozilla.org/www.mozilla.org/security/security/iSECPartners_Phishing.pdf [L,R=301]
+RewriteRule ^/security/phishing-test-results\.html http://website-archive.mozilla.org/www.mozilla.org/security/security/phishing-test-results.html [L,R=301]
+RewriteRule ^/security/phishing-test\.html http://website-archive.mozilla.org/www.mozilla.org/security/security/phishing-test.html [L,R=301]
+
 # bug 1001238, 1025056
 RewriteRule ^/(\w{2,3}(?:-\w{2}(?:-mac)?)?/)?firefox/(24\.[5678]\.\d)/releasenotes(/)?$ /b/$1firefox/$2/releasenotes$3 [L,PT]
 
