Bug 1090468: Move transition.txt to original url.

--- a/etc/httpd/global.conf
+++ b/etc/httpd/global.conf
@@ -820,6 +820,9 @@ RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?about(/?|/.+)$ /b/$1about$2 [PT]
 # Bug 1040970
 RewriteRule ^/mozillacareers$ https://wiki.mozilla.org/People/mozillacareers?utm_medium=redirect&utm_source=mozillacareers-vanity [L,R=301]
 
+# Bug 1090468
+RewriteRule ^/security/transition\.txt /media/security/transition.txt [L,PT]
+
 # Bug 1026184
 # TODO: enable this after testing and porting/archiving all pages
 #RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?security(/?|/.+)$ /b/$1security$2 [PT]
