Move /firefox/all-older.html redirect into bedrock Originally from Bug 730488, also references Bug 1074261

--- a/etc/httpd/global.conf
+++ b/etc/httpd/global.conf
@@ -155,6 +155,9 @@ RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?firefox/firefox\.exe$ /$1 [NC,L,R=301]
 # bug 821006
 RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?firefox/all(\.html)?$ /$1firefox/all/ [L,R=301]
 
+# bug 730488
+RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?firefox/all-older\.html$ /$1firefox/ [L,R=301]
+
 # bug 727561
 RewriteRule ^/en-US/firefox/search(?:\.html)?$ /en-US/firefox/ [L,R=301]
 
