--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,12 @@
+sudo: false
 language: python
 python:
   - "2.6"
+env:
+  - PIP_DOWNLOAD_CACHE="pip_cache"
+cache:
+  directories:
+    - pip_cache
 before_script:
   - flake8 bedrock lib
   - mysql -e 'create database bedrock_test;'
@@ -13,7 +19,6 @@ before_install:
 install:
   - pip install -r requirements/dev.txt
 after_success:
-  # Report coverage results to coveralls.io
   - pip install coveralls
   - coveralls
 notifications:
