--- a/etc/httpd/global.conf
+++ b/etc/httpd/global.conf
@@ -868,5 +868,11 @@ RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?firefox/independent(/?.*)$ /b/$1firefox/inde
 RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?firefox/hello(/?.*)$ https://support.mozilla.org/kb/respond-firefox-hello-invitation-guest-mode [L,R=temp]
 RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?firefox/([3-9]\d\.\d(?:a1|a2|beta|\.\d)?)/hello/start/?$ https://support.mozilla.org/kb/firefox-hello-make-and-receive-calls-guest-mode [L,R=temp]
 
+# Bug 1110927
+RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?firefox/start/central\.html$ /$1firefox/new/ [L,R=301]
+RewriteRule ^/en-US/firefox/en-US/firefox/whatsnew/$ /en-US/firefox/whatsnew/ [L,R=301]
+RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?firefox/panorama/$ https://support.mozilla.org/kb/tab-groups-organize-tabs [L,R=301]
+RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?firefox/sync/firstrun\.html$ /$1firefox/sync/ [L,R=301]
+
 # bug 1088752
 RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?shapeoftheweb(/?.*)$ /b/$1shapeoftheweb$2 [PT]
