Fix Bug 1103396 - Move Thunderbird start page to bedrock and make it localizable

--- a/etc/httpd/global.conf
+++ b/etc/httpd/global.conf
@@ -577,6 +577,9 @@ RewriteRule ^/(\w{2,3}(?:-\w{2}(?:-mac)?)?/)?thunderbird/releases/(.*)$ http://w
 RewriteRule ^/(\w{2,3}(?:-\w{2}(?:-mac)?)?/)?thunderbird/(.*)/releasenotes(.*)$ http://website-archive.mozilla.org/www.mozilla.org/thunderbird_releasenotes/en-US/thunderbird/$2/releasenotes$3 [L,R=301]
 RewriteRule ^/(\w{2,3}(?:-\w{2}(?:-mac)?)?/)?thunderbird/(.*)/system-requirements(.*)$ http://website-archive.mozilla.org/www.mozilla.org/thunderbird_releasenotes/en-US/thunderbird/$2/system-requirements$3 [L,R=301]
 
+# bug 1103396, more locales to come
+RewriteRule ^/en-US/thunderbird/release/start(/)?$ /b/en-US/thunderbird/release/start$1 [L,PT]
+
 # bug 1090468
 RewriteRule ^/security/older-alerts\.html http://website-archive.mozilla.org/www.mozilla.org/security/security/older-alerts.html [L,R=301]
 RewriteRule ^/security/security-announcement\.html http://website-archive.mozilla.org/www.mozilla.org/security/security/security-announcement.html [L,R=301]
