Fix Bug 1101220 - Developer Edition follow-ups

--- a/etc/httpd/global.conf
+++ b/etc/httpd/global.conf
@@ -170,11 +170,12 @@ RewriteRule ^/en-US/firefox/search(?:\.html)?$ /en-US/firefox/ [L,R=301]
 # bug 957664
 RewriteRule ^/en-US/press/awards(?:\.html)?$ https://blog.mozilla.org/press/awards/ [L,R=301]
 
-# bug 860865
+# bug 860865, 1101220
 RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?firefox/all-(?:beta|rc)(?:\.html)?$ /firefox/beta/all/ [L,R=301]
-RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?firefox/all-aurora(?:\.html)?$ /firefox/aurora/all/ [L,R=301]
+RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?firefox/all-aurora(?:\.html)?$ /$1firefox/developer/all/ [L,R=301]
+RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?firefox/aurora/(all|notes|system-requirements)/?$ /$1firefox/developer/$2/ [L,R=301]
 RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?firefox/organizations/all(?:\.html)?$ /firefox/organizations/all/ [L,R=301]
-RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?firefox/(aurora|beta)/all(/?)$ /b/$1firefox/$2/all$3 [PT]
+RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?firefox/(developer|beta)/all(/?)$ /b/$1firefox/$2/all$3 [PT]
 RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?firefox/organizations(.*)$ /b/$1firefox/organizations$2 [PT]
 
 # bug 803345
@@ -253,8 +254,9 @@ RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?firefox/unsupported/(.*)$ /b/$1firefox/unsup
 RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?firefox/unsupported-systems\.html$ /$1firefox/unsupported-systems/ [L,R=301]
 RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?firefox/unsupported-systems(.*)$ /b/$1firefox/unsupported-systems$2 [PT]
 
-# Bug 1009247
-RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?(firefox|mobile)/(aurora|beta)/?$ /$1firefox/channel/#$3 [NE,L,R=301]
+# Bug 1009247, 1101220
+RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?(firefox|mobile)/aurora/?$ /$1firefox/channel/#developer [NE,L,R=301]
+RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?(firefox|mobile)/beta/?$ /$1firefox/channel/#beta [NE,L,R=301]
 
 # bug 960651
 RewriteCond %{REQUEST_URI} !/unsupported
@@ -287,10 +289,10 @@ RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?mobile/customize(?:/.*)?$ /$1firefox/android
 RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?products(/?)$ /b/$1products$2 [PT]
 RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?firefox(/(?:\d+\.\d+\.?(?:\d+)?\.?(?:\d+)?(?:[a|b]?)(?:\d*)(?:pre)?(?:\d)?))?/whatsnew(/?)$ /b/$1firefox$2/whatsnew$3 [PT]
 
-# bug 736934, 860865
-RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?(firefox|mobile)/((?:beta|aurora|organizations)/)?notes(/?)$ /b/$1$2/$3notes$4 [PT]
+# bug 736934, 860865, 1101220
+RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?(firefox|mobile)/((?:beta|aurora|developer|organizations)/)?notes(/?)$ /b/$1$2/$3notes$4 [PT]
 RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?firefox/((?:beta|aurora|organizations)/)?system-requirements(\.html)?$ /$1firefox/$2system-requirements/ [L,R=301]
-RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?firefox/((?:beta|aurora|organizations)/)?system-requirements/$ /b/$1firefox/$2system-requirements/ [PT]
+RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?firefox/((?:beta|developer|organizations)/)?system-requirements/$ /b/$1firefox/$2system-requirements/ [PT]
 
 # bug 778752
 RewriteRule ^/en-US/firefox/channel/android(/?)$ /b/en-US/firefox/channel/android$1 [PT]
