Bug 1119312: Upgrade Django to 1.6.9
Also fixes some tests that were failing after upgrade.
Code was relying on Django's strip_tags filter which has
changed and now ignores things that obviously aren't HTML tags

Updated to latest playdoh-lib which includes fixes for Django 1.6
in funfactory.

--- a/.gitmodules
+++ b/.gitmodules
@@ -61,3 +61,6 @@
 [submodule "vendor-local/src/django-filter"]
 	path = vendor-local/src/django-filter
 	url = https://github.com/alex/django-filter.git
+[submodule "vendor-local/src/django"]
+	path = vendor-local/src/django
+	url = git://github.com/django/django.git
