--- a/.gitmodules
+++ b/.gitmodules
@@ -64,3 +64,9 @@
 [submodule "vendor-local/src/django"]
 	path = vendor-local/src/django
 	url = git://github.com/django/django.git
+[submodule "vendor-local/src/bleach"]
+	path = vendor-local/src/bleach
+	url = https://github.com/jsocol/bleach.git
+[submodule "vendor-local/src/html5lib"]
+	path = vendor-local/src/html5lib
+	url = https://github.com/html5lib/html5lib-python
