--- a/etc/httpd/global.conf
+++ b/etc/httpd/global.conf
@@ -29,7 +29,7 @@ RewriteRule ^(.*)$ $1 [L,R=301]
 # bug 845988 - remove double slashes in URLs
 RewriteRule ^(.*)//(.*)$ $1/$2 [L,R=301]
 
-# bug 764261, 841393, 996608, 1008162, 1067691, 1113136
+# bug 764261, 841393, 996608, 1008162, 1067691, 1113136, 1119022
 RewriteRule ^/zh-TW/$ http://mozilla.com.tw/ [L,R=301]
 RewriteCond %{REQUEST_URI} !^/zh-TW/firefox/dnt
 RewriteCond %{REQUEST_URI} !^/zh-TW/firefox/independent
@@ -40,6 +40,8 @@ RewriteCond %{REQUEST_URI} !^/zh-TW/firefox/sync
 RewriteCond %{REQUEST_URI} !^/zh-TW/firefox/partners
 RewriteCond %{REQUEST_URI} !^/zh-TW/firefox/desktop/tips
 RewriteCond %{REQUEST_URI} !^/zh-TW/firefox/nightly/firstrun/?
+RewriteCond %{REQUEST_URI} !^/zh-TW/firefox/hello
+RewriteCond %{REQUEST_URI} !^/zh-TW/firefox(/(?:\d+\.\d+\.?(?:\d+)?\.?(?:\d+)?(?:[a|b]?)(?:\d*)(?:pre)?(?:\d)?))?/hello/start/?
 RewriteCond %{REQUEST_URI} !^/zh-TW/firefox(/(?:\d+\.\d+\.?(?:\d+)?\.?(?:\d+)?(?:[a|b]?)(?:\d*)(?:pre)?(?:\d)?))?/firstrun/?
 RewriteCond %{REQUEST_URI} !^/zh-TW/firefox(/(?:\d+\.\d+\.?(?:\d+)?\.?(?:\d+)?(?:[a|b]?)(?:\d*)(?:pre)?(?:\d)?))?/tour/?
 RewriteCond %{REQUEST_URI} !^/zh-TW/firefox(/(?:\d+\.\d+\.?(?:\d+)?\.?(?:\d+)?(?:[a|b]?)(?:\d*)(?:pre)?(?:\d)?))?/whatsnew/?
