--- a/etc/httpd/global.conf
+++ b/etc/httpd/global.conf
@@ -221,7 +221,7 @@ RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?contribute/(student|university)ambassadors(.
 RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?projects(/?)$ /b/$1projects$2 [PT]
 
 # bug 1014823
-RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?firefox/releases/whatsnew(/?)$ /b/$1firefox/whatsnew/ [PT]
+RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?firefox/releases/whatsnew(/?)$ /$1firefox/whatsnew/ [L,R=301]
 
 RewriteRule ^/en-US/firefox/new(/?)$ /b/en-US/firefox/new$1 [PT]
 RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?firefox/geolocation(/?)$ /b/$1firefox/geolocation$2 [PT]
@@ -876,7 +876,6 @@ RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?firefox(/(?:\d+\.\d+\.?(?:\d+)?\.?(?:\d+)?(?
 
 # Bug 1110927
 RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?firefox/start/central\.html$ /$1firefox/new/ [L,R=301]
-RewriteRule ^/en-US/firefox/en-US/firefox/whatsnew/$ /en-US/firefox/whatsnew/ [L,R=301]
 RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?firefox/panorama/$ https://support.mozilla.org/kb/tab-groups-organize-tabs [L,R=301]
 RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?firefox/sync/firstrun\.html$ /$1firefox/sync/ [L,R=301]
 
