[fix bug 787269] Redirect signed-script pages to MDN article

--- a/etc/httpd/global.conf
+++ b/etc/httpd/global.conf
@@ -537,6 +537,9 @@ RewriteRule ^/projects/mathml(?:/(?:index.html|demo(?:/(?:index.html)?)?)?)?$ ht
 RewriteRule ^/projects/mathml/fonts(?:/(?:index.html)?)?$ https://developer.mozilla.org/Mozilla_MathML_Project/Fonts [L,R=301]
 RewriteRule ^/projects/mathml/screenshots(?:/(?:index.html)?)?$ https://developer.mozilla.org/Mozilla_MathML_Project/Screenshots [L,R=301]
 
+# bug 787269
+RewriteRule ^/projects/security/components/signed-script(?:s|-example)\.html$ https://developer.mozilla.org/docs/Bypassing_Security_Restrictions_and_Signing_Code [L,R=301]
+
 # bug 878039
 RewriteRule ^/access/architecture.html$ https://developer.mozilla.org/en-US/docs/Mozilla/Accessibility/Accessibility_architecture [L,R=301]
 RewriteRule ^/access/at-vendors.html$ https://developer.mozilla.org/en-US/docs/Mozilla/Accessibility/Information_for_Assistive_Technology_Vendors [L,R=301]
