--- a/etc/httpd/global.conf
+++ b/etc/httpd/global.conf
@@ -882,3 +882,6 @@ RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?firefox/sync/firstrun\.html$ /$1firefox/sync
 
 # bug 1088752
 RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?shapeoftheweb(/?.*)$ /b/$1shapeoftheweb$2 [PT]
+
+# bug 1120658
+RewriteRule ^/seamonkey-transition\.html$ http://www-archive.mozilla.org/seamonkey-transition.html [L,R=301]
