Serve static files with Whitenoise.
Create root_files dir for serving via Whitenoise.
Move .htaccess for media into static folder.
Will remove it later.

--- a/etc/httpd/global.conf
+++ b/etc/httpd/global.conf
@@ -2,6 +2,9 @@
 # License, v. 2.0. If a copy of the MPL was not distributed with this
 # file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
+# Static Media
+RewriteRule ^/media/(.*)$ /b/media/$1 [L,PT]
+
 ExpiresActive on
 
 ## Fix locales
@@ -649,10 +652,10 @@ RewriteRule ^/projects/security/certs/policy/InclusionPolicy.html /about/governa
 RewriteRule ^/robots.txt$ /b/robots.txt [PT]
 
 # bug 933311
-RewriteRule ^/humans.txt$ /media/humans.txt [L,PT]
+RewriteRule ^/humans.txt$ /b/humans.txt [L,PT]
 
 # bug 1003743
-RewriteRule ^/info\.txt$ /media/info.txt [L,PT]
+RewriteRule ^/info\.txt$ /b/info.txt [L,PT]
 
 # bug 1068931
 RewriteRule ^/advocacy/?$ https://advocacy.mozilla.org/ [L,R=301]
