Fix bug 1144901: GNU Terry Pratchett

--- a/etc/httpd/global.conf
+++ b/etc/httpd/global.conf
@@ -2,6 +2,11 @@
 # License, v. 2.0. If a copy of the MPL was not distributed with this
 # file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
+# bug 1144901
+<IfModule headers_module>
+  header set X-Clacks-Overhead "GNU Terry Pratchett"
+</IfModule>
+
 # Static Media
 RewriteRule ^/media/(.*)$ /b/media/$1 [L,PT]
 
