--- a/etc/httpd/global.conf
+++ b/etc/httpd/global.conf
@@ -36,7 +36,6 @@ RewriteRule ^(.*)//(.*)$ $1/$2 [L,R=301]
 RewriteRule ^/zh-TW/$ http://mozilla.com.tw/ [L,R=301]
 RewriteRule ^/zh-TW/mobile/?$ http://mozilla.com.tw/firefox/mobile/ [L,R=301]
 RewriteRule ^/zh-TW/download/?$ http://mozilla.com.tw/firefox/download/ [L,R=301]
-RewriteRule ^/zh-TW/products(/.*)?$ http://mozilla.com.tw/products$1 [L,R=301]
 
 # bug 874913
 RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?products/download.html$ /$1firefox/new/?#download-fx [NE,L,R=301]
@@ -221,9 +220,6 @@ RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?firefox/sync(/?)$ /b/$1firefox/sync$2 [PT]
 
 # bug 1101984
 RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?firefox/hello(/?)$ /b/$1firefox/hello$2 [PT]
-
-# bug 1133004
-RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?firefox/products(/?)$ /b/$1firefox/products$2 [PT]
 
 # bug 1071074
 RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?firefox/channel(/?)$ /b/$1firefox/channel$2 [PT]
@@ -885,3 +881,9 @@ RewriteRule ^/(contributor-data/[a-z]+.json)$ /b/$1 [L,PT]
 
 # bug 1108828
 RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?firefox/feedback(/?.*)$ /b/$1firefox/feedback$2 [PT]
+
+# bug 1133004
+RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?firefox/products(/?)$ /b/$1firefox/products$2 [PT]
+
+# bug 1148127
+RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?products(/?)$ /$1firefox/products/ [L,R=302]
