--- a/etc/httpd/global.conf
+++ b/etc/httpd/global.conf
@@ -879,3 +879,6 @@ RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?hello/?$ /$1firefox/hello/ [L,R=301]
 
 # bug 1116511
 RewriteRule ^/(contributor-data/[a-z]+.json)$ /b/$1 [L,PT]
+
+# bug 1108828
+RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?firefox/feedback(/?.*)$ /b/$1firefox/feedback$2 [PT]
