Bug 1148127 - fix redirects for product page
Rules were in the wrong order

--- a/etc/httpd/global.conf
+++ b/etc/httpd/global.conf
@@ -64,7 +64,7 @@ RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?about/drivers(\.html|/)?$ https://wiki.mozil
 RewriteRule ^/community/(?:directory|wikis|blogs|websites)\.html$ https://wiki.mozilla.org/Websites/Directory [L,R=301]
 
 # bug 885856
-RewriteRule ^/projects/index\.(de|fr|hr|sq)\.html$ /$1/products/ [L,R=301]
+RewriteRule ^/projects/index\.(de|fr|hr|sq)\.html$ /$1/firefox/products/ [L,R=302]
 
 # bug 856075
 RewriteRule ^/projects/technologies\.html$ https://developer.mozilla.org/docs/Mozilla/Using_Mozilla_code_in_other_projects [L,R=301]
@@ -281,7 +281,6 @@ RewriteRule ^/credits(/faq)?(/)?$ /b/credits$1$2 [L,PT]
 RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?mobile/customize(?:/.*)?$ /$1firefox/android/ [L,R=301]
 
 # bug 773739
-RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?products(/?)$ /b/$1products$2 [PT]
 RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?firefox(/(?:\d+\.\d+\.?(?:\d+)?\.?(?:\d+)?(?:[a|b]?)(?:\d*)(?:pre)?(?:\d)?))?/whatsnew(/?)$ /b/$1firefox$2/whatsnew$3 [PT]
 
 # bug 736934, 860865, 1101220
@@ -882,8 +881,9 @@ RewriteRule ^/(contributor-data/[a-z]+.json)$ /b/$1 [L,PT]
 # bug 1108828
 RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?firefox/feedback(/?.*)$ /b/$1firefox/feedback$2 [PT]
 
+# bug 1148127
+RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?products(/?)$ /$1firefox/products/ [L,R=302]
+
 # bug 1133004
 RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?firefox/products(/?)$ /b/$1firefox/products$2 [PT]
 
-# bug 1148127
-RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?products(/?)$ /$1firefox/products/ [L,R=302]
