--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,7 @@ cache:
     - pip_cache
 before_script:
   - flake8 bedrock lib
+  - python bin/check_calendars.py
   - mysql -e 'create database bedrock_test;'
   - python manage.py version
   - python manage.py syncdb --noinput --migrate
