--- a/etc/httpd/global.conf
+++ b/etc/httpd/global.conf
@@ -946,3 +946,6 @@ RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?thunderbird/organizations(/?)$ /b/$1thunderb
 
 # bug 1162755
 RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?firefox/pocket(/?)$ /b/$1firefox/pocket$2 [PT]
+
+# bug 1136436
+RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?firefox/ios(/?)$ /b/$1firefox/ios$2 [PT]
