Redirect /firefox/os/notes to MDN: fix bug 1155870

--- a/etc/httpd/global.conf
+++ b/etc/httpd/global.conf
@@ -323,6 +323,10 @@ RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?about/get-involved /$1contribute/ [L,R=301]
 RewriteCond %{ENV:HTTPS} !on
 RewriteRule ^/.*/plugincheck/ https://%{SERVER_NAME}%{REQUEST_URI} [L,R=301]
 
+# bug 1155870
+RewriteRule ^/(?:\w{2,3}(?:-\w{2})?/)?firefox/os/notes/?$ https://developer.mozilla.org/Firefox_OS/Releases [L,R=301]
+RewriteRule ^/(?:\w{2,3}(?:-\w{2})?/)?firefox/os/(?:release)?notes/(.*)/? https://developer.mozilla.org/Firefox_OS/Releases/$1 [L,R=301]
+
 # bug 878871
 RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?firefox/os(.*)$ /b/$1firefox/os$2 [PT]
 RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?firefoxos(.*)$ /$1firefox/os/ [NE,L,R=301]
@@ -551,11 +555,6 @@ RewriteRule ^/access/w4a.html$ https://developer.mozilla.org/en-US/docs/Mozilla/
 RewriteRule ^/access/windows/at-apis.html$ https://developer.mozilla.org/en-US/docs/Mozilla/Accessibility/Gecko_info_for_Windows_accessibility_vendors [L,R=301]
 RewriteRule ^/access/windows/msaa-server.html$ https://developer.mozilla.org/en-US/docs/Web/Accessibility/Implementing_MSAA_server [L,R=301]
 RewriteRule ^/access/windows/zoomtext.html$ https://developer.mozilla.org/en-US/docs/Mozilla/Accessibility/ZoomText [L,R=301]
-
-# bug 869495
-RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?firefox/os/releasenotes/1.0.1(.*)$ /b/$1firefox/os/releasenotes/1.0.1$2 [PT]
-# bug 912101
-RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?firefox/os/releasenotes/1.1(.*)$ /b/$1firefox/os/releasenotes/1.1$2 [PT]
 
 # bug 858315
 RewriteRule ^/projects/devpreview/firstrun(?:/(?:index.html)?)?$ /firefox/firstrun/ [L,R=301]
