Allow double dot beta relnotes: fix bug 1163979

--- a/etc/httpd/global.conf
+++ b/etc/httpd/global.conf
@@ -569,7 +569,7 @@ RewriteRule ^/(\w{2,3}(?:-\w{2}(?:-mac)?)?/)(firefox|mobile)/(\d)\.(.*)/releasen
 RewriteRule ^/(\w{2,3}(?:-\w{2}(?:-mac)?)?/)?mobile/(2[38]\.0(?:\.\d)?|29\.0(?:beta|\.\d)?)/releasenotes/?$ /$1firefox/android/$2/releasenotes/ [L,R=301]
 RewriteRule ^/(\w{2,3}(?:-\w{2}(?:-mac)?)?/)?mobile/([3-9]\d\.\d(?:a2|beta|\.\d)?)/(aurora|release)notes(/)?$ /$1firefox/android/$2/$3notes/ [L,R=301]
 RewriteRule ^/(\w{2,3}(?:-\w{2}(?:-mac)?)?/)?firefox/(android/)?(2[38]\.0(?:\.\d)?|29\.0(?:beta|\.\d)?)/releasenotes(/)?$ /b/$1firefox/$2$3/releasenotes$4 [L,PT]
-RewriteRule ^/(\w{2,3}(?:-\w{2}(?:-mac)?)?/)?firefox/(android/)?([3-9]\d\.\d(?:a2|beta|\.\d)?)/(aurora|release)notes(/)?$ /b/$1firefox/$2$3/$4notes$5 [L,PT]
+RewriteRule ^/(\w{2,3}(?:-\w{2}(?:-mac)?)?/)?firefox/(android/)?([3-9]\d\.\d(?:\.\d)?(?:a2|beta)?)/(aurora|release)notes(/)?$ /b/$1firefox/$2$3/$4notes$5 [L,PT]
 
 # bug 1081917, 1029829, 1029838
 RewriteRule ^/(\w{2,3}(?:-\w{2}(?:-mac)?)?/)?thunderbird/([3-9]\d\.\d(?:a2|beta|\.\d)?)/releasenotes(/)?$ /b/$1thunderbird/$2/releasenotes$3 [L,PT]
