--- a/.travis.yml
+++ b/.travis.yml
@@ -18,17 +18,17 @@ before_script:
   - python manage.py version
   - python manage.py syncdb --noinput --migrate
   - python manage.py collectstatic --noinput -v 0
-  - python manage.py update_product_details
-  - svn checkout https://svn.mozilla.org/projects/mozilla.com/trunk/locales/ locale
+  - travis_retry python manage.py update_product_details
+  - travis_retry svn checkout https://svn.mozilla.org/projects/mozilla.com/trunk/locales/ locale
 script: coverage run manage.py test
 before_install:
-  - git submodule update --init --recursive
+  - travis_retry git submodule update --init --recursive
 install:
-  - python bin/peep.py install -r requirements/dev.txt --no-use-wheel
-  - python bin/peep.py install -r requirements/prod.txt --no-use-wheel
+  - travis_retry python bin/peep.py install -r requirements/dev.txt --no-use-wheel
+  - travis_retry python bin/peep.py install -r requirements/prod.txt --no-use-wheel
 after_success:
-  - pip install coveralls
-  - coveralls
+  - travis_retry pip install coveralls
+  - travis_retry coveralls
 notifications:
   irc:
     channels:
