[Bug 1146982] Send to device widget updates

--- a/etc/httpd/global.conf
+++ b/etc/httpd/global.conf
@@ -242,6 +242,9 @@ RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?download/?$ /$1firefox/new/ [L,R=301]
 # bug 957283
 RewriteRule ^/(pt-BR)/firefox/speed(/?)$ /b/$1/firefox/speed$2 [PT]
 
+# bug 1146982
+RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?firefox/send-to-device-post(/?)$ /b/$1firefox/send-to-device-post$2 [PT]
+
 # bug 796952, 915845, 915867
 RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?firefox/unsupported/(.*)$ /b/$1firefox/unsupported/$2 [PT]
 
