Redirect firefox/os/releases to MDN: fix bug 1171178

--- a/etc/httpd/global.conf
+++ b/etc/httpd/global.conf
@@ -330,7 +330,7 @@ RewriteCond %{ENV:HTTPS} !on
 RewriteRule ^/.*/plugincheck/ https://%{SERVER_NAME}%{REQUEST_URI} [L,R=301]
 
 # bug 1155870
-RewriteRule ^/(?:\w{2,3}(?:-\w{2})?/)?firefox/os/notes/?$ https://developer.mozilla.org/Firefox_OS/Releases [L,R=301]
+RewriteRule ^/(?:\w{2,3}(?:-\w{2})?/)?firefox/os/(releases|notes)/?$ https://developer.mozilla.org/Firefox_OS/Releases [L,R=301]
 RewriteRule ^/(?:\w{2,3}(?:-\w{2})?/)?firefox/os/(?:release)?notes/(.*)/? https://developer.mozilla.org/Firefox_OS/Releases/$1 [L,R=301]
 
 # bug 878871
