Send /security.* to bedrock: fix bug 1173065

--- a/etc/httpd/global.conf
+++ b/etc/httpd/global.conf
@@ -840,15 +840,8 @@ RewriteRule ^/mozillacareers$ https://wiki.mozilla.org/People/mozillacareers?utm
 # Bug 1090468
 RewriteRule ^/security/transition\.txt /media/security/transition.txt [L,PT]
 
-# Bug 1026184
-# TODO: enable this after testing and porting/archiving all pages
-#RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?security(/?|/.+)$ /b/$1security$2 [PT]
-RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?security(/?)$ /b/$1security$2 [PT]
-RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?security/bug-bounty(.*)\.html$ /$1security/bug-bounty$2/ [L,R=301]
-RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?security/bug-bounty(.*)$ /b/$1security/bug-bounty$2 [PT]
-RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?security/advisories(.*)$ /b/$1security/advisories$2 [PT]
-RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?security/announce(.*)$ /b/$1security/announce$2 [PT]
-RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?security/known-vulnerabilities(.*)$ /b/$1security/known-vulnerabilities$2 [PT]
+# Bug 1026184 and 1173065
+RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?security(/?|/.+)$ /b/$1security$2 [PT]
 
 # Bug 1066629
 RewriteRule ^/contribute\.json$ /b/contribute.json [PT]
