--- a/package.json
+++ b/package.json
@@ -28,20 +28,14 @@
     "grunt-contrib-jshint": "~0.8.0",
     "grunt-contrib-watch": "~0.5.3",
     "grunt-jsonlint": "^1.0.4",
-    "grunt-karma": "~0.6.2",
-    "karma": "~0.10.9",
-    "karma-chrome-launcher": "~0.1.2",
-    "karma-coffee-preprocessor": "~0.1.3",
-    "karma-firefox-launcher": "~0.1.3",
-    "karma-html2js-preprocessor": "~0.1.0",
-    "karma-jasmine": "~0.1.5",
-    "karma-junit-reporter": "~0.2.1",
-    "karma-phantomjs-launcher": "~0.1.2",
-    "karma-requirejs": "~0.2.1",
-    "karma-script-launcher": "~0.1.0",
+    "grunt-karma": "^0.11.2",
+    "jasmine-core": "^2.3.4",
+    "karma": "^0.12.37",
+    "karma-firefox-launcher": "^0.1.6",
+    "karma-jasmine": "^0.3.5",
     "load-grunt-tasks": "^1.0.0",
     "phantomjs": "^1.9.15",
     "requirejs": "~2.1.11",
-    "sinon": "~1.8.2"
+    "sinon": "^1.15.4"
   }
 }
