Bug 686489 new download fennec apk download page

--- a/etc/httpd/global.conf
+++ b/etc/httpd/global.conf
@@ -853,6 +853,9 @@ RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?firefox/mobile/faq(/?)$ /$1firefox/android/f
 RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?firefox/android(/?)$ /b/$1firefox/android$2 [PT]
 RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?firefox/android/faq(/?)$ /b/$1firefox/android/faq$2 [PT]
 
+#Bug 686489
+RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?firefox/android/all(/?)$ /b/$1firefox/android/all$2 [PT]
+
 # Bug 979527
 RewriteCond %{HTTP_USER_AGENT} Firefox
 RewriteCond %{HTTP_USER_AGENT} !(Camino|Iceweasel|SeaMonkey)
