Bug 1184281. Fix family nav on tertiary pages.

--- a/etc/httpd/global.conf
+++ b/etc/httpd/global.conf
@@ -154,7 +154,7 @@ RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?firefox/all(\.html)?$ /$1firefox/all/ [L,R=3
 RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?firefox/all/$ /b/$1firefox/all/ [PT]
 
 # bug 1064416
-RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?firefox/interest-dashboard/$ /b/$1firefox/interest-dashboard/ [PT]
+RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?firefox/interest-dashboard(/?)$ /b/$1firefox/interest-dashboard/ [PT]
 
 # bug 727561
 RewriteRule ^/en-US/firefox/search(?:\.html)?$ /en-US/firefox/ [L,R=301]
