Fix Bug 1185070 - Move the rest of the hacking documents to Bedrock

--- a/etc/httpd/global.conf
+++ b/etc/httpd/global.conf
@@ -859,6 +859,14 @@ RewriteRule ^/hacking/committer/$ /about/governance/policies/commit/ [L,R=301]
 RewriteRule ^/hacking/committer/faq.html$ /about/governance/policies/commit/ [L,R=301]
 RewriteRule ^/hacking/notification/$ /about/governance/policies/commit/ [L,R=301]
 
+# bug 1165344
+RewriteRule ^/hacking/CVS-Contributor-Form\.(?:pdf|ps)$ /about/governance/policies/commit/ [L,R=301]
+RewriteRule ^/hacking/(?:form|getting-cvs-write-access)\.html$ /about/governance/policies/commit/ [L,R=301]
+RewriteRule ^/hacking/portable-cpp\.html$ https://developer.mozilla.org/docs/Mozilla/C++_Portability_Guide [L,R=301]
+RewriteRule ^/hacking/rules\.html$ https://developer.mozilla.org/docs/mozilla-central [L,R=301]
+RewriteRule ^/hacking/(module-ownership|reviewers)\.html$ /about/governance/policies/$1/ [L,R=301]
+RewriteRule ^/hacking/regression-policy\.html$ /about/governance/policies/regressions/ [L,R=301]
+
 # bug 1071959
 RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?firefox/independent(/?.*)$ /b/$1firefox/independent$2 [PT]
 
