Fix Bug 1133266 - Move Thunderbird Privacy Policy to Bedrock

--- a/etc/httpd/global.conf
+++ b/etc/httpd/global.conf
@@ -477,6 +477,10 @@ RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?privacy/policies/(facebook|firefox-os|websit
 RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?privacy(.*)$ /b/$1privacy$2 [PT]
 RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?legal/firefox(/?)$ /b/$1legal/firefox$2 [PT]
 
+# bug 1133266
+RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?thunderbird/legal/privacy/?$ /$1privacy/thunderbird/ [L,R=301]
+RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?thunderbird/about/privacy-policy/?$ /$1privacy/archive/thunderbird/2010-06/ [L,R=301]
+
 # bug 1034859
 RewriteRule ^/en-US/about/buttons/(.*) /media/img/careers/buttons/$1 [L,R=301]
 
