Redirect windows-10 welcome: fix bug 1187343

--- a/etc/httpd/global.conf
+++ b/etc/httpd/global.conf
@@ -153,6 +153,9 @@ RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?firefox/firefox\.exe$ /$1 [NC,L,R=301]
 RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?firefox/all(\.html)?$ /$1firefox/all/ [L,R=301]
 RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?firefox/all/$ /b/$1firefox/all/ [PT]
 
+# bug 1186485, 1187343
+RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?firefox/windows-10/welcome/?$ /b/$1firefox/windows-10/welcome/ [PT]
+
 # bug 1064416
 RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?firefox/interest-dashboard(/?)$ /b/$1firefox/interest-dashboard/ [PT]
 
