Bug 1003737 - Port and update http://www.mozilla.org/de/impressum/ to bedrock

--- a/etc/httpd/global.conf
+++ b/etc/httpd/global.conf
@@ -494,6 +494,9 @@ RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?about/partnerships\.html$ /$1about/partnersh
 # bug 809426
 RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?legal/eula(/?)$ /b/$1legal/eula$2 [PT]
 
+# bug 1003737
+RewriteRule ^/de/impressum/?$ /de/legal/impressum/ [L,R=301]
+
 # bug 960543
 RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?firefox/2.0/eula(?:.*) /$1legal/eula/firefox-2/ [L,R=301]
 RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?firefox/3.0/eula(?:.*) /$1legal/eula/firefox-3/ [L,R=301]
