Bug 1003737 Fix URL in German legal redirect

--- a/etc/httpd/global.conf
+++ b/etc/httpd/global.conf
@@ -495,7 +495,7 @@ RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?about/partnerships\.html$ /$1about/partnersh
 RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?legal/eula(/?)$ /b/$1legal/eula$2 [PT]
 
 # bug 1003737
-RewriteRule ^/de/impressum/?$ /de/legal/impressum/ [L,R=301]
+RewriteRule ^/de/impressum/?$ /de/about/legal/impressum/ [L,R=301]
 
 # bug 960543
 RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?firefox/2.0/eula(?:.*) /$1legal/eula/firefox-2/ [L,R=301]
