Fix Bug 1196578 - Move Thunderbird EULA pages to Bedrock

--- a/etc/httpd/global.conf
+++ b/etc/httpd/global.conf
@@ -509,6 +509,11 @@ RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?firefox/2.0/eula(?:.*) /$1legal/eula/firefox
 RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?firefox/3.0/eula(?:.*) /$1legal/eula/firefox-3/ [L,R=301]
 RewriteRule ^/en-US/legal/eula(.*)$ /b/en-US/legal/eula$1 [PT]
 
+# bug 1196578
+RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?thunderbird/about/legal/eula/?$ /$1about/legal/eula/ [L,R=301]
+RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?thunderbird/about/legal/eula/thunderbird2 /$1about/legal/eula/thunderbird-2/ [L,R=301]
+RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?thunderbird/about/legal/eula/thunderbird /$1about/legal/eula/thunderbird-1.5/ [L,R=301]
+
 # bug 724633 - Porting foundation pages
 # Add redirects for the pdfs that were under /foundation/documents/
 # that will now be served from static.mozilla.com/foundation/documents/
