Fix Bug 1124037 - Move Thunderbird Start and What's New pages to Bedrock

--- a/etc/httpd/global.conf
+++ b/etc/httpd/global.conf
@@ -609,6 +609,9 @@ RewriteRule ^/(\w{2,3}(?:-\w{2}(?:-mac)?)?/)?thunderbird/(.*)/system-requirement
 # bug 1103396 for en-US, bug 1115066 for other locales
 RewriteRule ^/(ar|bg|ca|cs|da|de|dsb|el|en-GB|en-US|es-AR|es-ES|et|eu|fr|fy-NL|ga-IE|gd|hr|hsb|hu|hy-AM|id|is|it|ja|ko|lt|nl|pl|pt-BR|pt-PT|rm|ru|si|sk|sl|sq|sr|sv-SE|tr|uk|zh-CN|zh-TW)/thunderbird/release/start(/)?$ /b/$1/thunderbird/release/start$2 [L,PT]
 
+# bug 1124037
+RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?thunderbird/(beta|earlybird|nightly)/(start|whatsnew)(/)?$ /b/$1thunderbird/$2/$3$4 [L,PT]
+
 # bug 1090468
 RewriteRule ^/security/older-alerts\.html http://website-archive.mozilla.org/www.mozilla.org/security/security/older-alerts.html [L,R=301]
 RewriteRule ^/security/security-announcement\.html http://website-archive.mozilla.org/www.mozilla.org/security/security/security-announcement.html [L,R=301]
