[fix bug 1169038] Firefox Push FAQ page

--- a/etc/httpd/global.conf
+++ b/etc/httpd/global.conf
@@ -165,6 +165,9 @@ RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?firefox/windows-10/welcome/?$ /b/$1firefox/w
 # bug 1064416
 RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?firefox/interest-dashboard(/?)$ /b/$1firefox/interest-dashboard/ [PT]
 
+# bug 1169038
+RewriteRule ^/(\w{2,3}(?:-\w{2})?/)?firefox/push(/?)$ /b/$1firefox/push/ [PT]
+
 # bug 727561
 RewriteRule ^/en-US/firefox/search(?:\.html)?$ /en-US/firefox/ [L,R=301]
 
